--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,15 @@
   }
 }
 
+.align-center {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 4%;
+  max-width: 80%;
+  margin: 0 auto;
+}
+
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
