--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,12 @@
   margin: 0 auto;
 }
 
+.greenText {
+  color: rgb(0, 164, 109);
+  font-weight: Bold;
+  font-size: 24px;
+}
+
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
